# pyproject-template

./: LICENSE  README.md  make  pyproject.toml
src/project/: __version__.py
