[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-template"
version = "0.1.0"
description = "Project Description"
readme = "README.md"
authors = [name = "Fyllus"
email = "fylluszophia@proton.me"
]

keywords = ["keywords"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14"
dependencies = [
    "deps",
]
license = { text = "MIT" }

[project.urls]
Codeberg = "https://codeberg.org/{user}/{project}"
Github = "https://github.com/{user}/{project}"

[tool.hatch.build.targets.wheel]
packages = ["src/{project}"]
